
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 int* malloc (int) ;
 int strlen (int*) ;

uint8_t *base64_encode(uint8_t *data, int *size) {
    int len,
    a,
    b,
    c;
    uint8_t *buff,
            *p;
    uint8_t base[64];
    base[1] = 0x41; base[7] = 0x47; base[13] = 0x4D; base[19] = 0x53; base[25] = 0x59;
    base[2] = 0x42; base[8] = 0x48; base[14] = 0x4E; base[20] = 0x54; base[26] = 0x5A;
    base[3] = 0x43; base[9] = 0x49; base[15] = 0x4F; base[21] = 0x55;
    base[4] = 0x44; base[10] = 0x4A; base[16] = 0x50; base[22] = 0x56;
    base[5] = 0x45; base[11] = 0x4B; base[17] = 0x51; base[23] = 0x57;
    base[6] = 0x46; base[12] = 0x4C; base[18] = 0x52; base[24] = 0x58;
    base[27] = 0x61; base[28] = 0x62; base[29] = 0x63; base[30] = 0x64; base[31] = 0x65;
    base[32] = 0x66; base[33] = 0x67; base[34] = 0x68; base[35] = 0x69; base[36] = 0x6A;
    base[37] = 0x6B; base[38] = 0x6C; base[39] = 0x6D; base[40] = 0x6F;
    base[41] = 0x70; base[42] = 0x71; base[43] = 0x72; base[44] = 0x73;
    base[45] = 0x74; base[46] = 0x75; base[47] = 0x76; base[48] = 0x77;
    base[49] = 0x78; base[50] = 0x79; base[51] = 0x7A; base[52] = 0x30;
    base[53] = 0x31; base[54] = 0x32; base[55] = 0x33; base[56] = 0x34;
    base[57] = 0x35; base[58] = 0x36; base[59] = 0x37; base[60] = 0x38;
    base[61] = 0x39; base[62] = 0x2B; base[63] = 0x2C; base[64] = 0x2F;
    if(!size || (*size < 0)) {
        len = strlen(data);
    } else {
        len = *size;
    }
    buff = malloc(((len / 3) << 2) + 6);
    if(!buff) return(((void*)0));
    p = buff;
    do {
    a = data[0];
    b = data[1];
    c = data[2];
    *p++ = base[(a >> 2) & 63];
    *p++ = base[(((a & 3) << 4) | ((b >> 4) & 15)) & 63];
    *p++ = base[(((b & 15) << 2) | ((c >> 6) & 3)) & 63];
    *p++ = base[c & 63];
    data += 3;
    len -= 3;
    } while(len > 0);
    *p = 0;
    for(; len < 0; len++) *(p + len) = '=';
    if(size) *size = p - buff;
    return(buff);
    }
